 - update patch and schema for PostgreSQL. Test it!
 - IT Helpdesk's problems to be connected to Services only (?)
 - module structure for Zabbix. Some modules (as Services, Helpdesk) should be
 made separate.

 IT SERVICES:

 - make IT Services stable
 - think about service node types (some nodes will automatically register
   problem)

 OTHER:

 - check for function parameters in evaluate_simple_expression
 - make links different if something is already registered (as for medias,
   actions, etc)
 - get rid of problems with ' and "
 - add host groups (one to one or one to many?)
 - add user groups
 - high level Zabbix schema on paper !
 - permissions for all *.php (charts, graphs , hosts, etc etc )
 - add numeric constants to trigger expressions
 - show who is online somewhere (in User config form?)
 - setup demo site
 - update function.lastvalue to NULL when trigger's status becomes
   UNKNOWN (done?)
 - update trigger status to unknown if cannot evaluate function 
 - do not dump "Expression cannot be evaluated" in case if function.lastvalue
   is NULL
 - get rid of register_globals in php.ini (use $HTTP_GET_VARS, ...)

 TO TEST:

  - all forms
  - validation of trigger expressions in PHP frontend
  - nodata() for trapped parameters
  - everything for PostgreSQL

Changes for 1.0beta6:

 - added table service_alarms (Alexei)

 - fixed problem with parsing of trigger expressions. [.-.] changed
 to - (Alexei)
 - support for function nodata() added (Alexei)
 - minimum number of zabbix_suckerd that can be started is 4 (Alexei)
 - simplified function update_triggers(). (Alexei)
 - fixed situation when Service is linked to a trigger. Service name is
   correct now. (Alexei)
 - support for new trigger function: str() (Alexei)
 - changed type of functions.parameter to varchar(255) (Alexei)
 - additional colors for graphs (Alexei)
 - in chart3.php: group by <complex expression> changed to group by 1
 (Alexei)
 - added housekeeping procedure for table sessions (Alexei)